cleaning unused imgs, added publication ribbon, scholar icon, changed logos

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
 								<li><a href="#presentations" id="presentations-link"><span class="icon brands fa-slideshare">Presentations</span></a></li>
+								<li><a href="#publications" id="publications-link"><span class="icon solid fa-graduation-cap">Publications</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -45,6 +46,7 @@
 							<li><a href="http://twitter.com/kalfasyan" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://github.com/kalfasyan" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://www.linkedin.com/in/kalfasyan/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://scholar.google.com/citations?user=WXHakDkAAAAJ&hl=en&oi=ao" class="icon solid fa-user-graduate"><span class="label">Email</span></a></li>
 							<li><a href="mailto:kalfasyan@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
@@ -212,7 +214,7 @@
 						<p>Slides from either seminars or group meetings.</p>
 
 						<div class="row">
-							<div class="col-4 col-12-mobile">
+							<div class="col-3 col-12-mobile">
 								<article class="item">
 									<a href="https://kuleuven-my.sharepoint.com/:b:/g/personal/ioannis_kalfas_kuleuven_be/EY6e0YqbU0RAtsY_mMjUzhMBBLrqcxcMF4IHh5FpQKjx_w?e=aY99uV" class="image fit">
 										<img src="images/wbt_sensor.png" alt="" /></a>
@@ -221,7 +223,7 @@
 									</header>
 								</article>
 							</div>
-							<div class="col-8 col-12-mobile">
+							<div class="col-3 col-12-mobile">
 								<article class="item">
 									<a href="https://kuleuven-my.sharepoint.com/:b:/g/personal/ioannis_kalfas_kuleuven_be/EaJQcy48Jj9FumjRSZRIjhUBR3ja5fLgGRzNNV5J8swJ6A?e=UBW3gp" class="image fit">
 										<img src="images/insect_images.png" alt="" /></a>
@@ -230,10 +232,10 @@
 									</header>
 								</article>								
 							</div>
-							<div class="col-6 col-12-mobile">
+							<div class="col-3 col-12-mobile">
 								<article class="item">
 									<a href="https://kuleuven-my.sharepoint.com/:p:/g/personal/ioannis_kalfas_kuleuven_be/Eagsf3t6-yhNnwt5sGdKhgoBZvyjfEDWlODaq5HM3blxwg?e=18BHhf" class="image fit">
-										<img src="images/anns.jpg" alt="" /></a>
+										<img src="images/anns.png" alt="" /></a>
 									<header>
 										<h3>Intro to ANNs (3Blue1Brown, B.Rohrer)</h3>
 									</header>
