--- a/index.html
+++ b/index.html
@@ -86,22 +86,24 @@
 						<a href="https://www.16personalities.com/istj-personality" class="image featured"><img src="images/banner_zita.jpg" alt="" /></a>
 
 						<p>
-							Having equipped myself with a broad scientific background on computer science and machine learning, 
-							I worked for 2 years as a PhD researcher at Group Neurophysiology of KU Leuven, 
-							carrying out research on deep Convolutional Neural Networks and their similarities with the visual system. 
+							Having an extensive scientific background in computer science and machine learning, 
+							I spent two years as a PhD researcher in the Group Neurophysiology at KU Leuven, 
+							studying deep Convolutional Neural Networks and their parallels to the visual system.
 						</p>
 						<p>
-							Next, I worked as a Data Scientist for approximately a year in a small - at that time - startup called Faktion 
-							in Antwerp. There I became familiar with various Industry practices and applications including: 
-							setting up end-to-end ML pipelines, training models for AI tasks, creating deployable Docker containers, 
-							setting up Cloud components and participating in 2 hackathons, winning one of them.
+							Next, I worked as a Data Scientist for around a year at an Antwerp-based startup called Faktion, 
+							which was small at the time. There, I became acquainted with many Industry practices and applications, 
+							such as setting up end-to-end ML pipelines, training models for AI tasks, building deployable Docker containers, 
+							setting up Cloud components, plus completing in two hackathons - winning one.
+						</p>
+						
 						<p>
 							Currently, I am back to working as a PhD Researcher at MeBioS, KU Leuven. 
 							In this department I am using Machine Learning to build smart automated insect-monitoring systems 
 							that require high real-world performance using data captured by optical sensors. 
 							I contribute to multiple stages of each project, from data gathering and annotation to 
 							data analysis and model building. Having already finished my PhD requirements, 
-							I am expected to graduate on October 2022.
+							I am expected to graduate on November 2022.
 						</p>
 
 					</div>
