--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 
 							<header>
 								<h2 class="alt">Καλωσόρισες, Välkommen, Welkom, Bienvenido/a</a></h2>
-								<p>I am a Data Scientist that specializes in using scientific libraries, artificial
-									intelligence frameworks and the UNIX shell for data analysis and modelling tasks.
-									Experienced in both Academia and Industry.</p>
+								<p>I am a Data Scientist who specializes in data analysis and modeling utilizing scientific libraries, 
+									artificial intelligence frameworks, and the UNIX shell. Both Academia and Industry experience.
+								</p>
 							</header>
 
 							<footer>
