--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Yannis Kalfas</h1>
-							<p>Data Scientist / Researcher</p>
+							<p>Researcher | Data Scientist | Machine Learning Engineer</p>
 						</div>
 
 					<!-- Nav -->
@@ -86,24 +86,28 @@
 						<a href="https://www.16personalities.com/istj-personality" class="image featured"><img src="images/banner_zita.jpg" alt="" /></a>
 
 						<p>
-							Having an extensive scientific background in computer science and machine learning, 
-							I spent two years as a PhD researcher in the Group Neurophysiology at KU Leuven, 
-							studying deep Convolutional Neural Networks and their parallels to the visual system.
+							🧠 With a broad scientific background in computer science and machine learning, I have gained invaluable experience 
+							through my diverse research and work experiences. Working as a PhD researcher in Group Neurophysiology at KU Leuven 
+							for 2 years, I conducted extensive research on deep Convolutional Neural Networks and their similarities with the visual 
+							system. Then, I transitioned to the role of Data Scientist at Faktion, a startup in Antwerp. During my tenure, I gained 
+							proficiency in various industry practices and applications, including setting up end-to-end ML pipelines, training models 
+							for AI tasks, creating deployable Docker containers, and working with Cloud components. I also participated in two 
+							hackathons and was proud to win one of them. 📊
 						</p>
 						<p>
-							Next, I worked as a Data Scientist for around a year at an Antwerp-based startup called Faktion, 
-							which was small at the time. There, I became acquainted with many Industry practices and applications, 
-							such as setting up end-to-end ML pipelines, training models for AI tasks, building deployable Docker containers, 
-							setting up Cloud components, plus completing in two hackathons - winning one.
+							🧑‍🎓 I returned to KU Leuven to pursue applied research and obtain my PhD in Bioscience Engineering. Currently, as a Post-doctoral 
+							researcher at MeBioS, KU Leuven, I am working on building intelligent automated insect-monitoring systems that require high 
+							real-world performance based on data gathered by optical sensors, utilizing Machine Learning. Additionally, I am conducting 
+							research on hyperspectral imaging and supervising the theses of doctoral and master's level students. My role in each project 
+							spans multiple phases, from data collection and annotation to data analysis and model development. 🧑‍💻
 						</p>
 						
 						<p>
-							Currently, I am back to working as a PhD Researcher at MeBioS, KU Leuven. 
-							In this department I am using Machine Learning to build smart automated insect-monitoring systems 
-							that require high real-world performance using data captured by optical sensors. 
-							I contribute to multiple stages of each project, from data gathering and annotation to 
-							data analysis and model building. Having already finished my PhD requirements, 
-							I am expected to graduate on November 2022.
+							💻 My future plans include gaining a deeper understanding of MLOps tools and techniques to deliver my trained models to the cloud 
+							or embed them in field agricultural devices, such as insect traps or imaging setups. I have already developed a Streamlit app for 
+							insect classification and annotation tasks to aid researchers with their workflow. At the moment I am building a FastAPI server to 
+							connect our deployed model with various partners. Furthermore, I am learning Hyperspectral Imaging techniques to model multi-dimensional 
+							data more efficiently, enabling me to take on even more complex projects in the future. 📈
 						</p>
 
 					</div>
@@ -118,7 +122,7 @@
 							</header>
 
 							<p>
-								Here you can find a selection of personal projects I've worked on in the past:
+								Here you can find a selection of personal projects I've worked on in the past, during my PhD:
 								<ui>
 									<li>
 										<strong>PhotoBox:</strong> Software for imaging insect sticky traps and classifying detected insects.
