--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						</header>
 
 						<a href="https://www.16personalities.com/istj-personality" class="image featured"><img src="images/banner_zita.jpg" alt="" /></a>
-						<ul>
+						<ul class="container">
 							<p>
 								🧠 With a broad scientific background in computer science and machine learning, I have gained invaluable experience 
 								through my diverse research and work experiences. Working as a PhD researcher in Group Neurophysiology at KU Leuven 
