--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			#about ul {
+				text-align: left;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
