--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 			#about ul {
 				text-align: left;
 			}
+			#portofolio ul {
+				text-align: left;
+			}
 		</style>
 	</head>
 	<body class="is-preload">
@@ -68,7 +71,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Καλωσόρισες, Välkommen, Welkom, Bienvenido/a</a></h2>
+								<h2 class="alt">Welcome!/a</a></h2>
 								<p>I am a Data Scientist who specializes in data analysis and modeling utilizing scientific libraries, 
 									artificial intelligence frameworks, and the UNIX shell. Both Academia and Industry experience.
 								</p>
@@ -128,30 +131,32 @@
 
 							<p>
 								Here you can find a selection of personal projects I've worked on in the past, during my PhD:
-								<ui>
-									<li>
-										<strong>PhotoBox:</strong> Software for imaging insect sticky traps and classifying detected insects.
-									</li>
-									<li>
-										<strong>stickybugs-ai:</strong> Insect image data analysis & modelling for classification/recognition purposes.
-									</li>
-									<li>
-										<strong>Home Surveillance:</strong> Motion detection using OpenCV (Raspberry Pi compatible), alerting through pushbullet, served with flask.
-									</li>
-									<li>
-										<strong>DL Tutorial:</strong> Tutorial for MSc. students on getting started with DL and image classification.
-									</li>
-									<li>
-										<strong>Flying insect trap:</strong> GUI for a Raspberry Pi connected to an optical Wingbeat Sensor and a Camera.
-									</li>
-									<li>
-										<strong>Wingbeat Frequencies:</strong> Messy code for the article: "Towards in-field insect monitoring..".
-									</li>
-									<li>
-										<strong>Knowing-Neurons article:</strong> A short article I wrote about Visual neurons and Deep Neural Netwokrs.
-									</li>									
+								<ul>
+									<ui>
+										<li>
+											<strong>PhotoBox:</strong> Software for imaging insect sticky traps and classifying detected insects.
+										</li>
+										<li>
+											<strong>stickybugs-ai:</strong> Insect image data analysis & modelling for classification/recognition purposes.
+										</li>
+										<li>
+											<strong>Home Surveillance:</strong> Motion detection using OpenCV (Raspberry Pi compatible), alerting through pushbullet, served with flask.
+										</li>
+										<li>
+											<strong>DL Tutorial:</strong> Tutorial for MSc. students on getting started with DL and image classification.
+										</li>
+										<li>
+											<strong>Flying insect trap:</strong> GUI for a Raspberry Pi connected to an optical Wingbeat Sensor and a Camera.
+										</li>
+										<li>
+											<strong>Wingbeat Frequencies:</strong> Messy code for the article: "Towards in-field insect monitoring..".
+										</li>
+										<li>
+											<strong>Knowing-Neurons article:</strong> A short article I wrote about Visual neurons and Deep Neural Netwokrs.
+										</li>									
 
-								</ui>
+									</ui>
+								</ul>
 							</p>
 
 							<div class="row">
