--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
 							<h1 id="title">Yannis Kalfas</h1>
-							<p>Researcher | Data Scientist | Machine Learning Engineer</p>
+							<p>Researcher, Data Scientist</p>
 						</div>
 
 					<!-- Nav -->
