--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Welcome!/a</a></h2>
+								<h2 class="alt">Welcome!</a></h2>
 								<p>I am a Data Scientist who specializes in data analysis and modeling utilizing scientific libraries, 
 									artificial intelligence frameworks, and the UNIX shell. Both Academia and Industry experience.
 								</p>
