--- a/index.html
+++ b/index.html
@@ -132,41 +132,27 @@
 							<p>
 								Here you can find a selection of personal projects I've worked on in the past, during my PhD:
 								<ul>
-									<ui>
+									<ui class="container">
 										<li>
-											<ul>
-												<strong>PhotoBox:</strong> Software for imaging insect sticky traps and classifying detected insects.
-											</ul>
+											<strong>PhotoBox:</strong> Software for imaging insect sticky traps and classifying detected insects.
 										</li>
 										<li>
-											<ul>
-												<strong>stickybugs-ai:</strong> Insect image data analysis & modelling for classification/recognition purposes.
-											</ul>
+											<strong>stickybugs-ai:</strong> Insect image data analysis & modelling for classification/recognition purposes.
 										</li>
 										<li>
-											<ul>
-												<strong>Home Surveillance:</strong> Motion detection using OpenCV (Raspberry Pi compatible), alerting through pushbullet, served with flask.
-											</ul>
+											<strong>Home Surveillance:</strong> Motion detection using OpenCV (Raspberry Pi compatible), alerting through pushbullet, served with flask.
 										</li>
 										<li>
-											<ul>
-												<strong>DL Tutorial:</strong> Tutorial for MSc. students on getting started with DL and image classification.
-											</ul>
+											<strong>DL Tutorial:</strong> Tutorial for MSc. students on getting started with DL and image classification.
 										</li>
 										<li>
-											<ul>
-												<strong>Flying insect trap:</strong> GUI for a Raspberry Pi connected to an optical Wingbeat Sensor and a Camera.
-											</ul>
+											<strong>Flying insect trap:</strong> GUI for a Raspberry Pi connected to an optical Wingbeat Sensor and a Camera.
 										</li>
 										<li>
-											<ul>
-												<strong>Wingbeat Frequencies:</strong> Messy code for the article: "Towards in-field insect monitoring..".
-											</ul>
+											<strong>Wingbeat Frequencies:</strong> Messy code for the article: "Towards in-field insect monitoring..".
 										</li>
 										<li>
-											<ul>
-												<strong>Knowing-Neurons article:</strong> A short article I wrote about Visual neurons and Deep Neural Netwokrs.
-											</ul>
+											<strong>Knowing-Neurons article:</strong> A short article I wrote about Visual neurons and Deep Neural Netwokrs.
 										</li>									
 
 									</ui>
@@ -272,6 +258,15 @@
 									</header>
 								</article>								
 							</div>
+							<div class="col-3 col-12-mobile">
+								<article class="item">
+									<a href="https://kuleuven-my.sharepoint.com/:p:/g/personal/ioannis_kalfas_kuleuven_be/EU0Eej8STZpHuHqj15mlz_cBZFqTXVmKV8dINUQE4Evmyw?e=q56zpm" class="image fit">
+										<img src="images/anns.png" alt="" /></a>
+									<header>
+										<h3>PhD Defense</h3>
+									</header>
+								</article>								
+							</div>							
 						</div>
 
 					</div>
