--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 							<div class="col-3 col-12-mobile">
 								<article class="item">
 									<a href="https://kuleuven-my.sharepoint.com/:p:/g/personal/ioannis_kalfas_kuleuven_be/EU0Eej8STZpHuHqj15mlz_cBZFqTXVmKV8dINUQE4Evmyw?e=q56zpm" class="image fit">
-										<img src="images/anns.png" alt="" /></a>
+										<img src="images/phddefenselogo.png" alt="" /></a>
 									<header>
 										<h3>PhD Defense</h3>
 									</header>
